[package]
name = "etp-core"
version = "1.1.0"
edition = "2025"
authors = ["ETP Core Team"]
description = "Evolutionary Transport Protocol Core Library"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[features]
default = ["full"]
full = ["ffi", "extensions", "countermeasures", "vpn", "anonymity"]
ffi = []
extensions = ["notify", "reqwest", "serde_yaml", "toml", "rust-ini", "serde-xml-rs", "url", "regex"]
countermeasures = []
vpn = ["tun"]
anonymity = ["tokio-util"]
xdp = ["aya", "aya-log", "etherparse", "nix"]

[dependencies]
libc = { version = "0.2", optional = false }

# Persistence
sled = { version = "0.34", optional = true }

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Error Handling & Logging
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
colored = "2.0"

# Data Structures & Utils
lazy_static = "1.4"
bytes = "1.4"
dashmap = "5.5"
parking_lot = "0.12"
lru = "0.11"
dirs = "5.0" # Cross-platform path management

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Crypto
rand = "0.8"
base64 = "0.21"
hex = "0.4"
blake3 = "1.4"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = "2.0"
hmac = "0.12"
sha2 = "0.10"
constant_time_eq = "0.3"

# System Info
sysinfo = "0.29"
chrono = "0.4"

# Network
snow = "0.9" # Noise Protocol
igd-next = "0.14" # UPnP
governor = "0.6" # Rate Limiting

# Extension Dependencies (Optional)
notify = { version = "6.0", optional = true }
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"], optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }
rust-ini = { version = "0.20", optional = true }
serde-xml-rs = { version = "0.6", optional = true }
url = { version = "2.4", optional = true }
regex = { version = "1.9", optional = true }

# --- Optional: Anonymity Module ---
# 用于 Tor/I2P 的 SOCKS5 握手和 TCP 封包处理
tokio-util = { version = "0.7", features = ["codec"], optional = true } 

# --- Platform Specific Dependencies ---

[target.'cfg(target_os = "windows")'.dependencies]
# winbase/powerbase for battery status, winnt/securitybaseapi for admin check
winapi = { version = "0.3", features = ["winnt", "shell32", "processthreadsapi", "handleapi", "securitybaseapi", "winbase", "powerbase"] }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "ios", target_os = "android"))'.dependencies]
tun = { version = "0.5", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
# 确保只在 Linux 编译
# --- XDP / eBPF Dependencies ---
aya = { version = "0.11", optional = true }
aya-log = { version = "0.1", optional = true }
etherparse = { version = "0.13", optional = true }
# nix 提供了更安全的 ioctl 和 socket 封装，比纯 libc 更适合生产环境
nix = { version = "0.26", features = ["net", "socket", "ioctl", "fs"], optional = true }