[package]
name = "etp-core"
version = "1.5.1"
edition = "2025"
authors = ["ETP Core Team"]
description = "Evolutionary Transport Protocol Core Library"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[features]
default = ["full"]
full = ["ffi", "extensions", "countermeasures", "vpn", "anonymity", "persistence", "dht_anti_sybil"]
ffi = []
extensions = ["notify", "reqwest", "serde_yaml", "toml", "rust-ini", "serde-xml-rs", "url", "regex"]
countermeasures = []
vpn = ["tun"]
anonymity = ["tokio-util"]
xdp = ["aya", "aya-log", "etherparse", "nix"]
ens-gateway = ["ethers", "warp"]
quantum-encryption = ["dep:pqcrypto-kyber", "dep:pqcrypto-dilithium", "dep:pqcrypto-traits"]
paranoid-security = ["zeroize", "quantum-encryption"]
persistence = ["sled"]
dht_anti_sybil = []
ipfs-integration = ["libp2p", "multihash"]
smart-contracts = ["dep:ethers"]


[dependencies]
libc = { version = "0.2", optional = false }

# Persistence
sled = { version = "0.34", optional = true }

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# 异步递归支持 (必需，用于 KNS 递归解析)
async-recursion = "1.0"

# Error Handling & Logging
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
colored = "2.0"

# Data Structures & Utils
lazy_static = "1.4"
bytes = "1.4"
dashmap = "5.5"
parking_lot = "0.12"
lru = "0.11"
dirs = "5.0" # Cross-platform path management

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Crypto
rand = "0.8"
base64 = "0.21"
hex = "0.4"
blake3 = "1.4"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = "2.0"
hmac = "0.12"
sha2 = "0.10"
constant_time_eq = "0.3"

# System Info
sysinfo = "0.29"
chrono = "0.4"

# Network
snow = "0.9" # Noise Protocol
igd-next = "0.14" # UPnP
governor = "0.6" # Rate Limiting

futures = "0.3"

# Extension Dependencies (Optional)
notify = { version = "6.0", optional = true }
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"], optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }
rust-ini = { version = "0.20", optional = true }
serde-xml-rs = { version = "0.6", optional = true }
url = { version = "2.4", optional = true }
regex = { version = "1.9", optional = true }

# --- Quantum Security (Optional) ---
# 仅在开启 quantum-encryption 时引入
pqcrypto-kyber = { version = "0.8", optional = true }
pqcrypto-dilithium = { version = "0.5", optional = true }
pqcrypto-traits = { version = "0.3", optional = true }

# --- Smart Contract Support (Optional) ---
ethers = { version = "2.0", optional = true }

# zeroize仅在开启“偏执安全”特性时引入。注意，paranoid-security特性与SecurityProfile中的Turbo或Paranoid等无关
# 普通模式 (default): 无额外开销，保持极速 O(1) 操作。这利用 Rust 的所有权和边界检查机制，在逻辑层面上防止旧数据被读取，从而省去了物理擦除数据的开销。
# 偏执模式 (paranoid-security): 彻底物理擦除数据，增加 O(N) 的内存写操作。对于 10Gbps+ 的高吞吐场景会有可见的 CPU 占用提升，但在密钥协商和钱包签名等低频高敏场景下完全可忽略。好处是即使发生 Panic 导致 Core Dump，或者利用 unsafe 代码越界读取 Pool 中的缓存，攻击者也只能读到全 0 数据。
zeroize = { version = "1.7", optional = true }

# --- Optional: Anonymity Module ---
# 用于 Tor/I2P 的 SOCKS5 握手和 TCP 封包处理
tokio-util = { version = "0.7", features = ["codec"], optional = true } 

# --- Optional: ENS Gateway Dependencies---
# ethers: 以太坊交互全家桶 (只启用必要特性以减小体积)
ethers = { version = "2.0", features = ["rustls"], optional = true }
# warp: 轻量级、基于 Filter 的 HTTP 服务器
warp = { version = "0.3", optional = true }

thiserror = "1.0" # 建议添加，用于简化错误定义。这里就不带上optional了。

# --- Optional: IPFS Integration ---
# 仅在开启 ipfs-integration 时引入
libp2p = { version = "0.52", features = ["tcp", "dns", "noise", "yamux", "kad", "macros", "tokio"], optional = true }
multihash = { version = "0.19", optional = true }

# --- Platform Specific Dependencies ---

[target.'cfg(target_os = "windows")'.dependencies]
# winbase/powerbase for battery status, winnt/securitybaseapi for admin check
winapi = { version = "0.3", features = ["winnt", "shell32", "processthreadsapi", "handleapi", "securitybaseapi", "winbase", "powerbase"] }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "ios", target_os = "android"))'.dependencies]
tun = { version = "0.5", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
# 确保只在 Linux 编译
# --- XDP / eBPF Dependencies ---
aya = { version = "0.11", optional = true }
aya-log = { version = "0.1", optional = true }
etherparse = { version = "0.13", optional = true }
# nix 提供了更安全的 ioctl 和 socket 封装，比纯 libc 更适合生产环境
nix = { version = "0.26", features = ["net", "socket", "ioctl", "fs"], optional = true }